<resources>
    <string name="app_name">Draw Primitives</string>
    <string name="action_settings">Settings</string>

    <string name="radius">Radius</string>
    <string name="color">Color</string>
    <string name="def">0</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="drawshape">Draw Shape</string>

    <string name="length">Length</string>
    <string name="stroke">Stroke width</string>

    <string name="line">Line</string>
    <string name="circle">Circle</string>
    <string name="picture">Picture</string>
    <string name="rectangle">Rectangle</string>
    <string name="title_activity_line">Line</string>
    <string name="title_activity_circle">Circle</string>
    <string name="title_activity_picture">Picture</string>
    <string name="title_activity_rectangle">Rectangle</string>
    <string name="title_activity_input">Input</string>
</resources>
