<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.seventhree.drawprimitives.Input">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawshape"
        android:id="@+id/drawshape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:onClick="draw" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colorspinner"
        android:layout_alignRight="@+id/drawshape"
        android:layout_alignEnd="@+id/drawshape"
        android:layout_alignLeft="@+id/drawshape"
        android:layout_alignStart="@+id/drawshape" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:id="@+id/colorview"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiusinput"
        android:hint="@string/def"
        android:background="@null"
        android:layout_below="@+id/colorspinner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius"
        android:id="@+id/radiusview"
        android:layout_alignBottom="@+id/radiusinput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"
        android:id="@+id/widthview"
        android:layout_above="@+id/heightview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/widthinput"
        android:hint="@string/def"
        android:background="@null"
        android:layout_below="@+id/radiusinput"
        android:layout_alignLeft="@+id/radiusinput"
        android:layout_alignStart="@+id/radiusinput"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/heightview"
        android:layout_alignTop="@+id/heightinput"
        android:layout_alignRight="@+id/radiusview"
        android:layout_alignEnd="@+id/radiusview" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightinput"
        android:hint="@string/def"
        android:background="@null"
        android:layout_below="@+id/widthinput"
        android:layout_alignLeft="@+id/widthinput"
        android:layout_alignStart="@+id/widthinput"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:id="@+id/lengthview"
        android:layout_alignBottom="@+id/lengthinput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lengthinput"
        android:hint="@string/def"
        android:background="@null"
        android:layout_below="@+id/heightinput"
        android:layout_alignLeft="@+id/heightinput"
        android:layout_alignStart="@+id/heightinput"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stroke"
        android:id="@+id/strokeview"
        android:layout_below="@+id/lengthinput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strokeinput"
        android:hint="@string/def"
        android:background="@null"
        android:layout_below="@+id/lengthinput"
        android:layout_alignLeft="@+id/lengthinput"
        android:layout_alignStart="@+id/lengthinput"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
